# lab-flow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
diagrams/: context.dot  data_model.dot  state_machine.dot
docs/: contributing.md  labflow-design-document.md
examples/inputs/: lab-message-critical-v0.json  lab-message-normal-v0.json
examples/outputs/: critical-output-v0.json  normal-output-v0.json
schemas/: error-response-v0.schema.json  lab-message-create-response-v0.schema.json  lab-message-ingest-response-v0.schema.json  lab-message-v0.schema.json  normalized-observation-v0.schema.json  workflow-event-v0.schema.json  workflow-run-response-v0.schema.json
src/labflow/: __init__.py  app.py  constants.py  utils.py
src/labflow/api/v0/: errors.py  health.py  lab_messages.py  router.py
src/labflow/database/: __init__.py  lab_message.py  workflow.py
src/labflow/models/: api_error.py  lab_message.py
src/labflow/schemas/: lab_message.py
tests/: conftest.py  test_health.py  test_lab_messages.py
tests/factories/: lab_message.py
