[project]
name = "labflow"
version = "0.1.0"
description = "Lab-result workflow service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/labflow/api/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["labflow", "factories"]
